2011-02-10  vadim  <vadim@netcitadel.com>

	* ObjectManipulator_tree_ops.cpp (getTreeLabel): fixes #2067 "Add
	way to show interface label in object tree". The tree now shows
	interface name and label if the label is not empty.

	* configlets/bsd/update_vlans: fixes #2066 "Existing VLAN
	interfaces are not properly removed from FreeBSD and install
	script fails"

2011-02-09  Vadim Kurland  <vadim@netcitadel.com>

	* RuleSetView.cpp (showToolTip): fixes #1915 "tooltip shown when
	mouse is over rule number should be added to the list of
	suppressed tooltips when 'Advanced user mode' is in effect"

	* platforms.cpp (setDefaultFailoverGroupAttributes): fixes #2064
	"CARP interfaces are not properly installed on FreeBSD cluster".
	I need to populate failover group objects with some reasonable
	defaults when they are created.

	* configlets/freebsd/installer_commands_root: fixes #2065
	"activation commands on FreeBSD and OpenBSD lose script exit
	status". Sequence of commands ran by the built-in installer on
	*BSD firewalls were losing exit status of the script which meant
	installer always declared installation a "success" even when
	there were errors.

2011-02-08  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): fixes #2061 "Installer shows success for
	failed installed on FreeBSD due to corrupt script file". Added
	bunch of common shell error messages to make sure installer
	recognizes them and mark install as a failure even if ssh fails
	to pass termination code.

	* instDialog.cpp (showPage): fixes #2037 "If there is an error
	when compiling firewall then installer should be
	aborted". Compile/install wizard should disable "Next" button
	after compile phase is done if all firewalls failed to compile
	with no errors.

	* configlets/bsd/update_bridge: fixes #2042 "add configlet and
	shell functions to manage bridge interfaces via shell script on
	OpenBSD and FreeBSD". Bridge interfaces are managed incrementally,